forgot nowrap (fixes #72)

--- a/twitter.gt2eb.style.scss
+++ b/twitter.gt2eb.style.scss
@@ -756,6 +756,7 @@ a.gt2-trend {
         width: 210px;
         overflow: hidden;
         text-overflow: ellipsis;
+        white-space: nowrap;
         font-size: incr(18px);
         font-weight: 700;
         &:hover {
